# quanzhanyi

./: .eslintrc.cjs  .gitignore  0902会议.md  README.md  build.yml  buildwash.sh  dockerBuild.sh  emmake.sh  index copy.html  index.html  merge.sh  package-lock.json  package.json  pnpm-lock.yaml  powershell_dockerBuild.ps1  tailwind.config.js  tsconfig.json  update.bat  vite.config.ts  坐标系转换说明.md  构建(1).xlsx  环境安装.md
cSource/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bac  CMakeLists.txt.bac2  Makefile  cmake_install.cmake  main.c  main_bac.c  mycylinderfit.js  mycylinderfit.wasm
cSource/export/include/vision/: searchOrganizedPointCloud_core.hpp
cSource/vision/: cvstDraw.cpp  insertMarkerUtilsCore.cpp  insertShapeAndMarkerUtils.cpp  insertShapeUtilsCore.cpp  labelRangeDataGroundRemovalUtilsCore.cpp  ndtUtilsCore.cpp  nonUniformVoxelGridFilterCore.cpp  pcalignUtilsCore.cpp  scanContextDescriptorUtilsCore.cpp  tupleTest.cpp  tupleTestCore.cpp  visionLabelRangeDataCore.cpp
cSource/vision/include/: cvstDraw.hpp  cvstThickLinePolygonVertices_sim.hpp  cvst_polygon.hpp  cvst_polygon_scanline.hpp  insertMarkerUtilsCore_api.hpp  insertShapeAndMarkerUtils.hpp  insertShapeUtilsCore_api.hpp  labelRangeDataGroundRemovalUtils.hpp  labelRangeDataGroundRemovalUtilsCore_api.hpp  ndtUtils.hpp  ndtUtilsCore_api.hpp  nonUniformVoxelGridFilter.hpp  nonUniformVoxelGridFilterCore_api.hpp  opticalFlowLK.hpp  pcalignUtils.hpp  pcalignUtilsCore_api.hpp  scanContextDescriptorUtils.hpp  scanContextDescriptorUtilsCore_api.hpp  tupleTest.hpp  visionLabelRangeData.hpp  visionLabelRangeDataCore_api.hpp
cSource/vision/include/calibration/: matrixUtils.hpp
codegen/: CMakeLists.txt
codegen/lib/apb/: apb.c  apb.h  apb_data.c  apb_data.h  apb_initialize.c  apb_initialize.h  apb_rtw.bat  apb_rtw.mk  apb_terminate.c  apb_terminate.h  apb_types.h  codedescriptor.dmr  defines.txt  rtwtypes.h
codegen/lib/apb/examples/: main.c  main.h
codegen/lib/apb/html/: report.mldatx
codegen/lib/apb/interface/: _coder_apb_api.c  _coder_apb_api.h  _coder_apb_mex.c  _coder_apb_mex.h
codegen/lib/cylderfit/: CMAkeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  cylderfit.c  cylderfit.h  cylderfit_data.c  cylderfit_data.h  cylderfit_emxAPI.c  cylderfit_emxAPI.h  cylderfit_emxutil.c  cylderfit_emxutil.h  cylderfit_initialize.c  cylderfit_initialize.h  cylderfit_rtw.bat  cylderfit_rtw.mk  cylderfit_rtw.rsp  cylderfit_terminate.c  cylderfit_terminate.h  cylderfit_types.h  defines.txt  gcGuiReport.mat  minOrMax.c  minOrMax.h  mycylderfit.c  mycylderfit.h  mycylderfit_data.c  mycylderfit_emxAPI.c  mycylderfit_emxAPI.h  mycylderfit_emxutil.c  mycylderfit_initialize.h  mycylderfit_terminate.h  pca.c  pca.h  pctransform.c  pctransform.h  pinv.c  pinv.h  pointCloud.c  (+27 more)
codegen/lib/cylderfit/examples/: main.c  main.h
codegen/lib/cylderfit/html/: report.mldatx
codegen/lib/cylderfit/interface/: _coder_cylderfit_api.c  (+9 more)
codegen/lib/mycylderfit/: codedescriptor.dmr  defines.txt  minOrMax.c  mycylderfit.c  mycylderfit_data.h  mycylderfit_emxutil.h  mycylderfit_initialize.c  mycylderfit_rtw.bat  mycylderfit_rtw.mk  mycylderfit_terminate.c  mycylderfit_types.h  pctransform.c  pctransform.h  pinv.c  pointCloud.h  pointCloudBase.c  pointCloudBase.h  rtGetInf.h  rtGetNaN.h  svd.c  svd.h  xaxpy.h  xdotc.c  xdotc.h  xnrm2.h  xrotg.c  xrotg.h  xswap.c  xzsvdc.c
codegen/mex/cylderfit/: build.ninja  buildInfo.mat  cfiGuiReport.mat  compile_commands.json  cylderfit.c  cylderfit.h  cylderfit_data.c  cylderfit_data.h  cylderfit_emxutil.c  cylderfit_emxutil.h  cylderfit_initialize.c  cylderfit_initialize.h  cylderfit_internal_types.h  cylderfit_mex.bat  cylderfit_mex.def  cylderfit_terminate.c  cylderfit_terminate.h  cylderfit_types.h  det.c  det.h  eml_int_forloop_overflow_check.c  eml_mtimes_helper.c  eml_mtimes_helper.h  handle.c  handle.h  isRigidTransform.c  isRigidTransform.h  mldivide.c  mldivide.h  mtimes.c  mtimes.h  pca.c  pca.h  pcnormals.c  pcnormals.h  pctransform.c  pctransform.h  pinv.c  pinv.h  pointCloud.c  (+36 more)
mycylderfit2/: CMakeLists.txt  codedescriptor.dmr  database.csv  database.xlsm  defines.txt  minOrMax.c  minOrMax.h  mycylderfit2.c  mycylderfit2.h  mycylderfit2_data.c  mycylderfit2_data.h  mycylderfit2_emxutil.c  mycylderfit2_emxutil.h  mycylderfit2_initialize.c  mycylderfit2_initialize.h  mycylderfit2_rtw.bat  mycylderfit2_rtw.mk  mycylderfit2_terminate.c  mycylderfit2_terminate.h  mycylderfit2_types.h  pinv.c  pinv.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  svd.c  svd.h  xaxpy.c  xaxpy.h  xdotc.c  xdotc.h  xnrm2.c  xnrm2.h  xrot.c  xrot.h  xrotg.c  (+4 more)
mycylderfit2/examples/: main.c  main.h
mycylderfit2/html/: main.js  report.mldatx
mycylderfit2/interface/: _coder_mycylderfit2_api.c  _coder_mycylderfit2_api.h  _coder_mycylderfit2_mex.c  _coder_mycylderfit2_mex.h
(+1493 files in other folders)
